--- a/studyai-app/app/home.module.css
+++ b/studyai-app/app/home.module.css
@@ -1,6 +1,6 @@
 #main {
     width: 100%;
-    height: 100%;
+    min-height: 100%;
     display: flex;
     flex-direction: row;
     background-color: var(--primary-color);
@@ -10,7 +10,7 @@
     display: flex;
     flex-direction: column;
     flex: 1;
-    height: 100%;
+    min-height: 100%;
 }
 
 #search {
